Fix overflow for mobile browsers
Fixes #24

--- a/compass/sass/media/_screen_global.scss
+++ b/compass/sass/media/_screen_global.scss
@@ -12,6 +12,10 @@
         overflow-x: hidden;
         overflow-y: scroll;
     }
+    
+    body {
+        overflow-x: hidden;
+    }
 
     body article {
         padding-left: $gutter-width;
